created a navbar with toggle button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="styling.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
+
+
     <script src="js/bootstrap.min.js"></script>
   </head>
   <body>
@@ -19,6 +25,52 @@
 
 
     </video>
+
+    <nav role="navigation" class="navbar navbar-custom navbar-fixed-top" id="navbarinit">
+      <div class="container-fluid">
+
+        <div class="navbar-header">
+
+          <a class="navbar-brand">Spiritual Course Website</a>
+
+          <button type="button" class="navbar-toggle" data-target="#mynavbar" data-toggle="collapse">
+            <span class="sr-only">Toggle Bar</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+
+
+          </button>
+
+        </div>
+        <div class="navbar-collapse collapse" id="mynavbar">
+
+          <ul class="nav navbar-nav pull-right ">
+
+            <li class="active"><a href="#soul">Soul</a></li>
+            <li><a href="#inside">Inside You</a></li>
+            <li><a href="#purpose">Our Purpose</a></li>
+
+
+          </ul>
+
+        </div>
+
+
+
+
+
+
+
+      </div>
+
+           
+
+
+
+
+
+    </nav>
 
    
 
