Created home section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,26 @@
 
     </nav>
 
+
+<!-- CREATE SOUL SECTION-->
+    <div class="jumbotron" id="soul">
+
+      <div class="container">
+
+        <h1>Enlightfull Spiritual Course Website</h1>
+        <h1>Go From Human Being To Universal Being..!</h1>
+
+        <p><a class="btn">Join Us</a></p>
+
+
+
+      </div>
+
+
+
+
+    </div>
+
    
 
 
