--- a/index.html
+++ b/index.html
@@ -92,6 +92,150 @@
 
     </div>
 
+
+    <!--CREATE INSIDE SOUL SECTION-->
+
+    <div id="inside">
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col-md-4">
+
+            <img class="insideimage" src="images/preach.png">
+            <h1>High Quality Philosophies</h1>
+            <p>The world is full of magic things, patiently waiting for our senses to grow sharper.</p>
+          </div>
+          <div class="col-md-4">
+
+            <img class="insideimage" src="images/spiritual.png">
+            <h1>+100Hrs of Rich Sayings</h1>
+            <p>I believe in God, but not as one thing, not as an old man in the sky. I believe that what people call God is something in all of us. I believe that what Jesus and Mohammed and Buddha and all the rest said was right. It's just that the translations have gone wrong.</p>
+          </div>
+          <div class="col-md-4">
+
+            <img class="insideimage" src="images/god.svg">
+            <h1>Get In Touch Anytime.</h1>
+            <p>Science is not only compatible with spirituality; it is a profound source of spirituality.</p>
+          </div>
+
+
+        </div>
+      </div>
+
+
+    </div>
+
+    <!--CREATE CARASOUL SLIDE -->
+
+    <div id="purpose" class="container-fluid">
+      <div class="carousel slide" id="myCarousel" data-ride="carousel">
+          <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active">
+              </li>
+              <li data-target="#myCarousel" data-slide-to="1">
+              </li>
+              <li data-target="#myCarousel" data-slide-to="2">
+              </li>
+              <li data-target="#myCarousel" data-slide-to="3">
+              </li>
+              <li data-target="#myCarousel" data-slide-to="4">
+              </li>
+              <li data-target="#myCarousel" data-slide-to="5">
+              </li>
+              <li data-target="#myCarousel" data-slide-to="6">
+              </li>
+          </ol>
+          <div class="carousel-inner">
+              <div class="item active">
+                  <img src="images/aware.jpg">
+                  <div class="carousel-caption">
+                      <h2>A quiet conscience makes one strong!</h2>
+                  </div>
+              </div>
+              <div class="item">
+                  <img src="images/boys.jpg">
+                  <div class="carousel-caption">
+                      <h2>You can't have a physical transformation until you have a spiritual transformation..</h2>
+                  </div>
+              </div>
+              <div class="item">
+                  <img src="images/god.svg">
+                  <div class="carousel-caption">
+                      <h2>Sometimes I think there are only two instructions we need to follow to develop and deepen our spiritual life: slow down and let go.</h2>
+                  </div>
+              </div>
+              <div class="item">
+                  <img src="images/dance.jpg">
+                  <div class="carousel-caption">
+                      <h2>Peaceful is the one who’s not concerned with having more or less. Unbound by name and fame, he is free from sorrow from the world and mostly from himself.</h2>
+                  </div>
+              </div>
+              <div class="item">
+                  <img src="images/meditation.jpg">
+                  <div class="carousel-caption">
+                      <h2>We are all connected; To each other, biologically. To the earth, chemically. To the rest of the universe atomically.</h2>
+                  </div>
+              </div>
+              <div class="item">
+                  <img src="images/mandalas.png">
+                  <div class="carousel-caption">
+                      <h2>Enlightenment means taking full responsibility for your life.</h2>
+                  </div>
+              </div>
+              <div class="item">
+                  <img src="images/relaxation.jpg">
+                  <div class="carousel-caption">
+                      <h2>You do not need to work to become spiritual. You are spiritual; you need only to remember that fact. Spirit is within you. God is within you..</h2>
+                  </div>
+              </div>
+          </div>
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="sr-only">Previous</span>
+          
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="sr-only">Previous</span>
+          
+          </a>
+      </div>
+  </div>
+
+  <!--CREATE FOOTER-->
+
+  <div class="footer">
+
+    <div class="container">
+      <p>&copy;Develop With Aravind.</p>
+    </div>
+  </div>
+
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
+  
+
+  <script>
+
+    $(function(){
+      $('.carousel').carousel({
+        interval : 5000
+      });
+    });
+  </script>
+
+
+
+
+
+
+
+
    
 
 
